   * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs
   * Fix bug #21867: team flag colors not refreshed after making use of
     [modify_side] color= unless a new flag set is also provided.
   * Fix a bug where in movement records, "skip_sighted" was sometimes
     spelled as "skip_sighed".
   * Remove 'allow_new_game=no' entries from random map new game list

Version 1.11.14:
 * Campaigns:
   * Son of the Black Eye: minor balance tweaks to scenarios 7, 8 and 14
 * Language and i18n:
   * Updated translations: Hungarian, Slovak
 * Miscellaneous and bug fixes:
   * Fix bug #21967: fix crash when unit modification to traits has empty id
   * Fix bug #19258, 21962: WML variables spuriously copied to replay_start
   * Fix bug #21961, Units are not attacking if the attack was issued from
     more than one hex away.
   * Fix implementation bug in random number generator: rand_pool_ is now an
     unsigned long rather than an unsigned int.
   * Fix bug #21491: fix drag+drop for unit movements
   * Fix bug #21448: make premoved units selection like in Wesnoth 1.10
   * Fix bug #21372: fix unit move continuation if enemy discovered
   * Micro AIs: a few more fixes of subtle or rarely occurring bugs in Hang Out
     MAI and AI helper libraries
   * Fix bug #22030: correct index of weapon special disable in attack GUI
   * Fix bug #21964: assertion failure when using "controller" attribute with
     a number.

Version 1.11.13:
 * AI:
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Some internal reorganization of Micro AI code to facilitate customizing