@@ -9,6 +9,9 @@ Version 1.11.14+dev:
    * Fix a bug where in movement records, "skip_sighted" was sometimes
      spelled as "skip_sighed".
    * Remove 'allow_new_game=no' entries from random map new game list
+   * Fix bug #22020: make base units with variations help entry clickable
+     from the 'Unit Description' menu entry or from side pane.
+
 
 Version 1.11.14:
  * Campaigns:
